--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=nicat
 spring.datasource.password=hvKQGtAbzBDZHy4d
 
+
+user.token.expiration.day = 3
+
