--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,16 @@ spring.datasource.password=hvKQGtAbzBDZHy4d
 
 
 user.token.expiration.day = 3
+activation.email.size = 5
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=face.recognition.iot@gmail.com
+spring.mail.password=geeofyejstwarqko
+# spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.protocol=smtps
+# spring.mail.host=smtp.yandex.ru
+# spring.mail.port=465
+# spring.mail.username=info@employee.az
+# spring.mail.password=p1C9hfL/L9SX[g{4hF#XeM
+# spring.mail.protocol=smtps
