--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url =jdbc:mysql://springboot.c6poyupvrudj.eu-central-1.rds.amazonaws.com:3306/myproject
+spring.datasource.url =jdbc:mysql://hostname/myproject
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=nicat
-spring.datasource.password=hvKQGtAbzBDZHy4d
+spring.datasource.username=username
+spring.datasource.password=***
 
 
 user.token.expiration.day = 3
@@ -9,6 +9,6 @@ activation.email.size = 5
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username=face.recognition.iot@gmail.com
-spring.mail.password=geeofyejstwarqko
+spring.mail.username=mail
+spring.mail.password=*****
 spring.mail.protocol=smtps
