Implementing user validation ; backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,19 @@ spring.mail.port=465
 spring.mail.username=face.recognition.iot@gmail.com
 spring.mail.password=geeofyejstwarqko
 spring.mail.protocol=smtps
+
+user.regForm.name.required=Name is required
+user.regForm.name.alpha=FirstName must be only letters
+user.regForm.name.length=FirstName must  be min{0} max{1} 
+user.regForm.surName.required=Lastname is required
+user.regForm.surName.alpha=LastName must be only letters
+user.regForm.surName.length=LastName must  be min{0} max{1} 
+user.regForm.email.required=Email is required
+user.regForm.email.true=Email is not valid
+user.regForm.email.duplicate=Email is already exist
+user.regForm.password.required=Password is required
+user.regForm.password.valid=Password is not valid
+user.regForm.password.length=Password must be min {0} max {1} 
+user.regForm.password.equal=Password not equals
+user.regForm.passwordConfirmation.required=Password confirmation is required
+user.regForm.acceptTerms.required=Accept terms must be accepted
